--- a/geode-cracker/src/index.css
+++ b/geode-cracker/src/index.css
@@ -1,13 +1,28 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root{
+  --background-color: #202020;
+  --banner-background-dark-color: #2F3033;
+  --banner-background-light-color: #3C3E42;
+  --naturalis-red-color: #F93F35;
+  --naturalis-green-color: #489F58;
+  --error-color: #FA6B00;
+  --inactive-red-color: #A5D7B9;
+  --inactive-green-color: #B96560;
+  --white-color: #FFFFFF;
+  --black-color: #000000;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  font-size: 62.5%;
+  font-family: 'Akkurat';
+  src: local('Akkurat'), url(./fonts/Akkurat.ttf), format('truetype');
+  background-color: var(--background-color);
+}
+
+*, *::before, *::after {
+  margin: 0;
+  padding: 0;
+  font-weight: 100;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
 }
