--- a/geode-cracker/src/index.css
+++ b/geode-cracker/src/index.css
@@ -15,7 +15,6 @@
   font-size: 62.5%;
   font-family: 'Akkurat';
   src: local('Akkurat'), url(./fonts/Akkurat.ttf), format('truetype');
-  background-color: var(--background-color);
 }
 
 *, *::before, *::after {
@@ -25,4 +24,8 @@
   text-decoration: none;
   list-style: none;
   box-sizing: border-box;
+}
+
+body {
+  background-color: var(--background-color);
 }
