--- a/geode-cracker/src/Banner/Banner.css
+++ b/geode-cracker/src/Banner/Banner.css
@@ -1,14 +1,25 @@
-.bannerTopImage, .bannerBottomImage{
+.banner{
   z-index: 2;
   width: 100vw;
-  max-height: 20rem;
+  height: 20rem;
 }
 
-.bannerTopImage{
+.banner--top {
   position: sticky;
   top: 0;
+  margin-bottom: 1rem;
 }
 
-.bannerBottomImage{
+.banner--bottom {
   bottom: 0;
+}
+
+.banner__figure {
+  width: 100%;
+  height: 100%;
+}
+
+.banner__figure__image {
+  width: 100%;
+  height: 100%;
 }
