feat(index.css): add button classes
- add .button with white background green text
- add .button--green with green background white text
- add .button--red with red background green text
- add .button...:disabled for all types of buttons

note: all images withing a button will now float right

--- a/geode-cracker/src/index.css
+++ b/geode-cracker/src/index.css
@@ -29,3 +29,48 @@
 body {
   background-color: var(--background-color);
 }
+
+.button{
+  position: relative;
+
+  color: var(--naturalis-green-color);
+  font-size: 1.8rem;
+  text-align: center;
+
+  border: none;
+  border-radius: 0.4rem;
+  background-color: var(--white-color);
+}
+
+.button:hover{
+  cursor: pointer;
+}
+
+.button > img{
+  position: absolute;
+  right: 1.4rem;
+}
+
+.button:disabled{
+  background-color: transparent;
+}
+
+.button--green{
+  color: var(--white-color);
+  background-color: var(--naturalis-green-color);
+}
+
+.button--red{
+  color: var(--white-color);
+  background-color: var(--naturalis-red-color);
+}
+
+.button--green:disabled{
+  color: var(--inactive-green-color);
+  border: solid .2rem var(--inactive-green-color);
+}
+
+.button--red:disabled{
+  color: var(--inactive-red-color);
+  border: solid .2rem var(--inactive-red-color);
+}
