--- a/geode-cracker/src/Banner/Banner.css
+++ b/geode-cracker/src/Banner/Banner.css
@@ -1,7 +1,7 @@
 .banner{
   z-index: 2;
   width: 100vw;
-  height: 20rem;
+  max-height: 20rem;
 }
 
 .banner--top {
@@ -16,10 +16,10 @@
 
 .banner__figure {
   width: 100%;
-  height: 100%;
+  max-height: 20rem;
 }
 
 .banner__figure__image {
   width: 100%;
-  height: 100%;
+  max-height: 20rem;
 }
