--- a/geode-cracker/src/Mascot/MascotFullscreen.css
+++ b/geode-cracker/src/Mascot/MascotFullscreen.css
@@ -1,8 +1,10 @@
 .mascot{
+  position: fixed;
   min-width: 30rem;
   max-width: 38rem;
-  margin: 0 auto;
-  padding: 1rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .mascot__figure{
