--- a/geode-cracker/src/index.css
+++ b/geode-cracker/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto");
+
 :root{
   --background-color: #202020;
   --banner-background-dark-color: #2F3033;
@@ -15,6 +17,7 @@
   font-size: 62.5%;
   font-family: 'Akkurat';
   src: local('Akkurat'), url(./fonts/Akkurat.ttf), format('truetype');
+  color:var(--white-color);
 }
 
 *, *::before, *::after {
@@ -28,6 +31,10 @@
 
 body {
   background-color: var(--background-color);
+}
+
+h1, h2, h3{
+  font-family: 'Roboto';
 }
 
 .button{
