--- a/geode-cracker/src/Banner/Banner.scss
+++ b/geode-cracker/src/Banner/Banner.scss
@@ -2,6 +2,16 @@
   z-index: 2;
   width: 100vw;
   max-height: 20rem;
+
+  &__figure{
+    width: 100%;
+    max-height: 20rem;
+
+    &__image{
+      width: 100%;
+      max-height: 20rem;
+    }
+  }
 }
 
 .banner--top {
@@ -12,14 +22,4 @@
 
 .banner--bottom {
   bottom: 0;
-}
-
-.banner__figure {
-  width: 100%;
-  max-height: 20rem;
-}
-
-.banner__figure__image {
-  width: 100%;
-  max-height: 20rem;
 }
