--- a/geode-cracker/src/Banner/Banner.scss
+++ b/geode-cracker/src/Banner/Banner.scss
@@ -2,24 +2,25 @@
   z-index: 2;
   width: 100vw;
   max-height: 20rem;
+
+  &__figure{
+    width: 100%;
+    max-height: 20rem;
+
+    &__image{
+      width: 100%;
+      max-height: 20rem;
+    }
+  }
 }
 
 .banner--top {
   position: sticky;
   top: 0;
+  
   margin-bottom: 1rem;
 }
 
 .banner--bottom {
   bottom: 0;
-}
-
-.banner__figure {
-  width: 100%;
-  max-height: 20rem;
-}
-
-.banner__figure__image {
-  width: 100%;
-  max-height: 20rem;
 }
