feat: add settings open and close functionalities
- Settings.js code moved to SettingsMenu.js
- Settings.js now handles all Settings functionalities
- toggleComponent Function added inside Settings.js to handle show and hide of components
- settingsRestart Function added inside Settings.js to handle the restarting of the interaction

--- a/geode-cracker/src/index.scss
+++ b/geode-cracker/src/index.scss
@@ -97,3 +97,12 @@ h1, h2, h3{
   border: solid .2rem var(--inactive-red-color);
   background-color: transparent;
 }
+
+.button--image{
+  border: none;
+  background: transparent;
+}
+
+.button--image:hover{
+  cursor: pointer;
+}
