--- a/geode-cracker/src/Settings/Settings.scss
+++ b/geode-cracker/src/Settings/Settings.scss
@@ -1,57 +1,28 @@
-.settingsSection{
-    min-width: 30rem;
-    max-width: 38rem;
-    margin: 0 auto;
-    padding: 1rem;
-
-    &__heading{
-        margin-bottom: 2rem;
-
-        text-align: center;
-        color: var(--white-color);
-        font-size: 3.4rem;
-        font-weight: 1000;
-    }
-
-    &__languages{
-        display: flex;
-        justify-content: space-between;
-        
-        margin-bottom: 4rem;
-
-        &__button{
-            width: 45%;
-            height: 4.6rem;
-        }
-    }
-
-    &__toggles{
-        margin-bottom:4rem;
-
-        &__toggleOption{
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-
-            &__text{
-                color: var(--white-color);
-                font-size: 2rem;
-            }
-        }
-
-        &__hr{
-            margin: 1rem 0;
-        }
-    }
+.settings{
 
     &__button{
-        width: 100%;
-        height: 4.6rem;
-
-        font-weight: 1000;
+        position: fixed;
+        top: 0;
+        right: 0;
+        z-index: 100;
+        
+        min-width: 8rem;
+        min-height: 8rem;
 
         &__image{
-            height: 2rem;
+            object-fit: cover;
         }
+    }
+
+    &__modal{
+        position: fixed;
+        top: 0;
+        z-index: 9;
+
+        width: 100vw;
+        height: 100vh;
+        padding-top: 20rem;
+
+        background: var(--background-color);
     }
 }
