--- a/geode-cracker/src/Collection/Collection.scss
+++ b/geode-cracker/src/Collection/Collection.scss
@@ -62,6 +62,7 @@
                 height: 100%;
 
                 object-fit: contain;
+                border-radius: 1rem;
             }
         }
         
