refactor: rewrite brush interaction

--- a/geode-cracker/src/Polish/Polish.scss
+++ b/geode-cracker/src/Polish/Polish.scss
@@ -12,6 +12,8 @@
     border: none;
     background-color: transparent;
 
+    visibility: hidden;
+
     &__img{
       height: 100%;
       max-height: 10rem;
@@ -45,30 +47,12 @@
 
       &__rock{
         position: absolute;
-
-        &--1{
-          top: 1.5rem;
-          right: 5rem;
-        }
-
-        &--2{
-          bottom: 7rem;
-          right: .2rem;
-        }
-
-        &--3{
-          bottom: 2.7rem;
-          left: 2.5rem;
-        }
-
-        &--4{
-          top: 8rem;
-          left: 1.5rem;
-        }
       }
-
+      
       &__glimmer{
         position: absolute;
+
+        visibility: hidden;
 
         &--1{
           bottom: 0;
@@ -90,6 +74,10 @@
 
     bottom:5rem;
     right: 0;
+
+    &--cloth{
+      visibility: hidden;
+    }
   }
 
 
