feat: add crack page
- add Crack.js and Crack.scss
- add CrackPlace.js and CrackPlace.scss
- add CrackLever.js and CrackLever.scss
- add CrackFinish.js and CrackFinish.scss
- add crack page images
- add button--triggerbox styling to index.scss

--- a/geode-cracker/src/index.scss
+++ b/geode-cracker/src/index.scss
@@ -106,3 +106,13 @@ h1, h2, h3{
 .button--image:hover{
   cursor: pointer;
 }
+
+.button--triggerbox{
+  color: transparent;
+  background: transparent;
+
+}
+
+.button--triggerbox:hover{
+  cursor: pointer;
+}
