tweak: remove button--triggerbox border

--- a/geode-cracker/src/index.scss
+++ b/geode-cracker/src/index.scss
@@ -109,8 +109,8 @@ h1, h2, h3{
 
 .button--triggerbox{
   color: transparent;
+  border: none;
   background: transparent;
-
 }
 
 .button--triggerbox:hover{
