tweak: show progress polishing

--- a/geode-cracker/src/Polish/Polish.scss
+++ b/geode-cracker/src/Polish/Polish.scss
@@ -65,6 +65,15 @@
         }
       }
     }
+
+    &__percent{
+      margin-top: .5rem;
+
+      text-align: center;
+      font-size: 2rem;
+
+      visibility: hidden;
+    }
   }
 
   &__moveable{
