--- a/geode-cracker/src/Polish/Polish.scss
+++ b/geode-cracker/src/Polish/Polish.scss
@@ -12,6 +12,8 @@
     border: none;
     background-color: transparent;
 
+    visibility: hidden;
+
     &__img{
       height: 100%;
       max-height: 10rem;
@@ -19,8 +21,6 @@
   }
 
   &__text{
-    margin-top: 3rem;
-
     text-align: center;
     font-size: 3.6rem;
   }
@@ -45,30 +45,12 @@
 
       &__rock{
         position: absolute;
-
-        &--1{
-          top: 1.5rem;
-          right: 5rem;
-        }
-
-        &--2{
-          bottom: 7rem;
-          right: .2rem;
-        }
-
-        &--3{
-          bottom: 2.7rem;
-          left: 2.5rem;
-        }
-
-        &--4{
-          top: 8rem;
-          left: 1.5rem;
-        }
       }
 
       &__glimmer{
         position: absolute;
+
+        visibility: hidden;
 
         &--1{
           bottom: 0;
@@ -83,13 +65,26 @@
         }
       }
     }
+
+    &__percent{
+      margin-top: .5rem;
+
+      text-align: center;
+      font-size: 2rem;
+
+      visibility: hidden;
+    }
   }
 
   &__moveable{
     position: absolute;
 
-    bottom:5rem;
+    bottom: 0rem;
     right: 0;
+
+    &--cloth{
+      visibility: hidden;
+    }
   }
 
 
