--- a/geode-cracker/src/Polish/Polish.scss
+++ b/geode-cracker/src/Polish/Polish.scss
@@ -1,3 +1,8 @@
+body{
+  height: 100vh;
+  overflow-y: hidden;
+}
+
 .polish{
   max-width: 40rem;
   margin: 0 auto;
@@ -87,7 +92,36 @@
     }
   }
 
+  &__wash{
+    position: absolute;
+    top: 0rem;
+    left: 0;
 
+    width: 100vw;
+    height: 100vh;
+
+    background: linear-gradient(180deg, rgba(172,232,255,0) 0%, rgba(172,232,255,0.5) 25%, rgba(172,232,255,0.5) 50%, rgba(172,232,255,0.5) 75%, rgba(172,232,255,0) 100%);
+
+    transition: 4s;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards;
+
+    &__foam{
+      position: absolute;
+
+      bottom: 0;
+
+      width: 100%;
+    }
+
+    &--before{
+      top: -100%;
+    }
+
+    &--after{
+      top: 100%;
+    }
+  }
 
 
 }
