--- a/geode-cracker/src/Polish/Polish.scss
+++ b/geode-cracker/src/Polish/Polish.scss
@@ -1,8 +1,3 @@
-body{
-  height: 100vh;
-  overflow-y: hidden;
-}
-
 .polish{
   max-width: 40rem;
   margin: 0 auto;
@@ -82,7 +77,7 @@ body{
   }
 
   &__moveable{
-    position: absolute;
+    position: fixed;
 
     bottom: 0rem;
     right: 0;
@@ -93,7 +88,7 @@ body{
   }
 
   &__wash{
-    position: absolute;
+    position: fixed;
     top: 0rem;
     left: 0;
 
