feat: add mascot help toggle

--- a/geode-cracker/src/Mascot/MascotCard.scss
+++ b/geode-cracker/src/Mascot/MascotCard.scss
@@ -29,7 +29,8 @@
     &__text{
       color: var(--white-color);
       font-size: 2rem;
-
+      overflow-wrap: break-word;
+      
       &--choice{
         width: 100%;
         margin-bottom: 2rem;
