--- a/geode-cracker/src/Mascot/MascotHelp.scss
+++ b/geode-cracker/src/Mascot/MascotHelp.scss
@@ -6,6 +6,7 @@
     height: 9rem;
     padding: 0 2rem;
 
+    z-index: 2;
     &__figure{
         float: left;
 
@@ -19,28 +20,32 @@
     }
 
     &__dialogue{
+        position: relative;
         float: left;
-    
+
         width: 65%;
         height: 7rem;
-        margin: 1rem 0;
+        margin: 1rem 0 0 1rem;
         padding: 0.8rem;
 
         border-radius: 1rem;
         background-color: var(--naturalis-green-color);
 
+        visibility: hidden;
         &__text{
-            font-size: 1.4rem;
+          font-size: 1.4rem;
+          overflow-wrap: break-word;
         }
 
         &__arrow{
-            position: absolute;
+          position: absolute;
 
-            margin: -1.8rem 0 0 -1.5rem;
-        
-            border-top: 1rem solid transparent;
-            border-bottom: 1rem solid transparent;
-            border-right: 1rem solid var(--naturalis-green-color);
+          top: 2rem;
+          left: -0.8rem;
+
+          border-top: 1rem solid transparent;
+          border-bottom: 1rem solid transparent;
+          border-right: 1rem solid var(--naturalis-green-color);
         }
     }
 }
