--- a/geode-cracker/src/Mascot/MascotHelp.scss
+++ b/geode-cracker/src/Mascot/MascotHelp.scss
@@ -1,6 +1,7 @@
 .help{
     position: absolute;
     bottom: 10rem;
+    display: flex;
 
     width: 100%;
     height: 9rem;
@@ -23,8 +24,8 @@
         position: relative;
         float: left;
 
-        width: 65%;
-        height: 7rem;
+        min-width: 60%;
+        min-height: 7rem;
         margin: 1rem 0 0 1rem;
         padding: 0.8rem;
 
