--- a/geode-cracker/src/Mascot/MascotHelp.scss
+++ b/geode-cracker/src/Mascot/MascotHelp.scss
@@ -1,52 +1,51 @@
 .help{
-    position: absolute;
-    bottom: 10rem;
-    display: flex;
+  position: absolute;
+  bottom: 1rem;
+  display: flex;
 
-    width: 100%;
-    height: 9rem;
-    padding: 0 2rem;
+  width: 100%;
+  height: 9rem;
+  padding: 0 2rem;
 
-    z-index: 2;
-    &__figure{
-        float: left;
+  z-index: 2;
+  &__figure{
+      float: left;
+      flex-shrink: 0;
 
-        max-width: auto;
-        height: 9rem;
+      height: 9rem;
 
-        &__image{
-            max-width: 100%;
-            height: 100%;
-        }
-    }
+      &__image{
+          width: 100%;
+          height: 100%;
+      }
+  }
 
-    &__dialogue{
-        position: relative;
-        float: left;
+  &__dialogue{
+      position: relative;
+      float: left;
+      flex-grow: 1; 
+      
+      margin: 1rem 0 0 1rem;
+      padding: 0.8rem;
 
-        min-width: 60%;
-        min-height: 7rem;
-        margin: 1rem 0 0 1rem;
-        padding: 0.8rem;
+      border-radius: 1rem;
+      background-color: var(--naturalis-green-color);
 
-        border-radius: 1rem;
-        background-color: var(--naturalis-green-color);
+      visibility: hidden;
+      &__text{
+        font-size: 1.4rem;
+        overflow-wrap: break-word;
+      }
 
-        visibility: hidden;
-        &__text{
-          font-size: 1.4rem;
-          overflow-wrap: break-word;
-        }
+      &__arrow{
+        position: absolute;
 
-        &__arrow{
-          position: absolute;
+        top: 2rem;
+        left: -0.8rem;
 
-          top: 2rem;
-          left: -0.8rem;
-
-          border-top: 1rem solid transparent;
-          border-bottom: 1rem solid transparent;
-          border-right: 1rem solid var(--naturalis-green-color);
-        }
-    }
+        border-top: 1rem solid transparent;
+        border-bottom: 1rem solid transparent;
+        border-right: 1rem solid var(--naturalis-green-color);
+      }
+  }
 }
