--- a/geode-cracker/src/Mascot/MascotCard.scss
+++ b/geode-cracker/src/Mascot/MascotCard.scss
@@ -30,7 +30,7 @@
       color: var(--white-color);
       font-size: 2rem;
       overflow-wrap: break-word;
-      
+
       &--choice{
         width: 100%;
         margin-bottom: 2rem;
@@ -42,23 +42,19 @@
       }
     }
 
-    &__arrowContainer{
-      position: relative;
-      top: -2.5rem;
+    &__arrow--up{
+      position: absolute;
+      top: -1.4rem;
+      left: 0;
+      right: 0;
 
-      &__arrow-up{
-        position: absolute;
-        left: 0;
-        right: 0;
+      width: 0;
+      margin-left: auto;
+      margin-right: auto;
 
-        width: 0;
-        margin-left: auto;
-        margin-right: auto;
-
-        border-left: 1.5rem solid transparent;
-        border-right: 1.5rem solid transparent;
-        border-bottom: 1.5rem solid var(--naturalis-green-color);
-      }
+      border-left: 1.5rem solid transparent;
+      border-right: 1.5rem solid transparent;
+      border-bottom: 1.5rem solid var(--naturalis-green-color);
     }
 
     &__button{
