--- a/geode-cracker/src/Collection/Collection.scss
+++ b/geode-cracker/src/Collection/Collection.scss
@@ -1,17 +1,20 @@
 
 .collection{
-    max-width: 100rem;
-    margin: 0 2rem;
+    min-width: 30rem;
+    max-width: 50rem;
+    margin: 0 auto;
+    padding: 0 2rem;
 
     &__information{
+        width: 100%;
+        
         &__figure{
-            max-width: 100%;
-            height: auto;
+            width: 100%;
             margin-bottom: 3rem;
 
             &__image{
                 max-width: 100%;
-                height: 100%;
+                max-height: 100%;
                 
                 object-fit: contain;
                 border-radius: 1rem;
