--- a/geode-cracker/src/index.scss
+++ b/geode-cracker/src/index.scss
@@ -15,8 +15,7 @@
 
 * {
   font-size: 62.5%;
-  font-family: 'Akkurat';
-  /*src: local('Akkurat'), url(fonts/Akkurat.ttf), format('truetype');*/
+  font-family: 'Roboto';
   color:var(--white-color);
 }
 
