--- a/geode-cracker/src/Settings/Settings.scss
+++ b/geode-cracker/src/Settings/Settings.scss
@@ -6,10 +6,15 @@
         right: 0;
         z-index: 100;
         
-        min-width: 8rem;
-        min-height: 8rem;
+        min-width: 7rem;
+        min-height: 7rem;
+        width: 5vw;
+        height: 5vh;
+        margin: 2rem;
 
         &__image{
+            width: 100%;
+            height: 100%;
             object-fit: cover;
         }
     }
