--- a/geode-cracker/src/Polish/Polish.scss
+++ b/geode-cracker/src/Polish/Polish.scss
@@ -32,6 +32,7 @@
     margin: 0 auto;
 
     &__figure{
+
       position: relative;
       height: 100%;
       margin-top: 2rem;
@@ -46,6 +47,8 @@
       }
 
       &__rock{
+        transition: 1s;
+
         position: absolute;
         max-width: 15rem;
       }
