--- a/geode-cracker/src/Settings/Settings.scss
+++ b/geode-cracker/src/Settings/Settings.scss
@@ -6,11 +6,9 @@
         right: 0;
         z-index: 100;
         
-        min-width: 7rem;
-        min-height: 7rem;
-        width: 5vw;
-        height: 5vh;
-        margin: 2rem;
+        width: 5rem;
+        height: 5rem;
+        margin: 2.5rem;
 
         &__image{
             width: 100%;
